unpackaged/main/default/objects/Customer_Quote__c/Customer_Quote__c.object-meta.xml
<CustomObject>
    <description>Customer Quote</description>
    <label>Customer Quote</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>