unpackaged/main/default/objects/Customer_Quote__c/fields/Accident_Faulty_Penalty_AED__c.field-meta.xml
<CustomField>
    <fullName>Accident_Faulty_Penalty_AED__c</fullName>
    <label>Accident Faulty Penalty AED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>