unpackaged/main/default/objects/Customer_Quote__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Quotes</relationshipLabel>
    <relationshipName>Customer_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>