unpackaged/main/default/objects/Customer_Quote__c/fields/Additional_Terms_Charges__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_Charges__c</fullName>
    <label>Additional Terms Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>