unpackaged/main/default/objects/Customer_Quote__c/fields/AdditionalAddress__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAddress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional To</label>
    <type>Address</type>
</CustomField>