unpackaged/main/default/objects/Customer_Quote__c/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bill To</label>
    <type>Address</type>
</CustomField>