unpackaged/main/default/objects/Customer_Quote__c/fields/BillingName__c.field-meta.xml
<CustomField>
    <fullName>BillingName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bill To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>