unpackaged/main/default/objects/Customer_Quote__c/fields/Branding_Installation__c.field-meta.xml
<CustomField>
    <fullName>Branding_Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Branding Installation</label>
    <type>Checkbox</type>
</CustomField>