unpackaged/main/default/objects/Customer_Quote__c/fields/Branding_Installation_AED__c.field-meta.xml
<CustomField>
    <fullName>Branding_Installation_AED__c</fullName>
    <label>Branding Installation AED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>