unpackaged/main/default/objects/Customer_Quote__c/fields/Branding_is_done_by_ET_or_Client__c.field-meta.xml
<CustomField>
    <fullName>Branding_is_done_by_ET_or_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Branding is done by ET or Client</label>
    <type>Checkbox</type>
</CustomField>