unpackaged/main/default/objects/Customer_Quote__c/fields/Branding_is_done_by_ET_or_Client_AED__c.field-meta.xml
<CustomField>
    <fullName>Branding_is_done_by_ET_or_Client_AED__c</fullName>
    <label>Branding is done by ET or Client AED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>