unpackaged/main/default/objects/Customer_Quote__c/fields/clientType__c.field-meta.xml
<CustomField>
    <fullName>clientType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>