unpackaged/main/default/objects/Customer_Quote__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Terms</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>