unpackaged/main/default/objects/Customer_Quote__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Quotes</relationshipLabel>
    <relationshipName>Customer_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>