unpackaged/main/default/objects/Customer_Quote__c/fields/Contact_PersonTitle__c.field-meta.xml
<CustomField>
    <fullName>Contact_PersonTitle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Person Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>