unpackaged/main/default/objects/Customer_Quote__c/fields/Customer_Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Quote_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Quote Date</label>
    <type>Date</type>
</CustomField>