unpackaged/main/default/objects/Customer_Quote__c/fields/DARB_consumption__c.field-meta.xml
<CustomField>
    <fullName>DARB_consumption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DARB consumption</label>
    <type>Checkbox</type>
</CustomField>