unpackaged/main/default/objects/Customer_Quote__c/fields/DARB_consumption_AED__c.field-meta.xml
<CustomField>
    <fullName>DARB_consumption_AED__c</fullName>
    <label>DARB consumption AED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>