unpackaged/main/default/objects/Customer_Quote__c/fields/DARB_consumption_Types__c.field-meta.xml
<CustomField>
    <fullName>DARB_consumption_Types__c</fullName>
    <label>DARB consumption Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Terms_and_Conditions_Types</valueSetName>
    </valueSet>
</CustomField>