unpackaged/main/default/objects/Customer_Quote__c/fields/Delivery_of_the_Vehicles_Days__c.field-meta.xml
<CustomField>
    <fullName>Delivery_of_the_Vehicles_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery of the Vehicles Days</label>
    <type>Checkbox</type>
</CustomField>