unpackaged/main/default/objects/Customer_Quote__c/fields/Delivery_of_the_Vehicles_Days_Count__c.field-meta.xml
<CustomField>
    <fullName>Delivery_of_the_Vehicles_Days_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Delivery of the Vehicles Days Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>