unpackaged/main/default/objects/Customer_Quote__c/fields/Delivery_of_the_Vehicles_Days_Types__c.field-meta.xml
<CustomField>
    <fullName>Delivery_of_the_Vehicles_Days_Types__c</fullName>
    <label>Delivery of the Vehicles Days Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Terms_and_Conditions_Types</valueSetName>
    </valueSet>
</CustomField>