unpackaged/main/default/objects/Customer_Quote__c/fields/Driver_Drug_Test_charges_Types__c.field-meta.xml
<CustomField>
    <fullName>Driver_Drug_Test_charges_Types__c</fullName>
    <label>Driver Drug Test charges Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Terms_and_Conditions_Types</valueSetName>
    </valueSet>
</CustomField>