unpackaged/main/default/objects/Customer_Quote__c/fields/Driver_Training__c.field-meta.xml
<CustomField>
    <fullName>Driver_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver Training</label>
    <type>Checkbox</type>
</CustomField>