unpackaged/main/default/objects/Customer_Quote__c/fields/Driver_Training_AED__c.field-meta.xml
<CustomField>
    <fullName>Driver_Training_AED__c</fullName>
    <label>Driver Training AED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>