unpackaged/main/default/objects/Customer_Quote__c/fields/ETSALES_Sector__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Sector__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>