unpackaged/main/default/objects/Customer_Quote__c/fields/GL_Activity__c.field-meta.xml
<CustomField>
    <fullName>GL_Activity__c</fullName>
    <formula>Opportunity_Name__r.GL_Activity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Activity</label>
    <type>Text</type>
</CustomField>