unpackaged/main/default/objects/Customer_Quote__c/fields/GL_Department__c.field-meta.xml
<CustomField>
    <fullName>GL_Department__c</fullName>
    <formula>Opportunity_Name__r.GL_Department__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Department</label>
    <type>Text</type>
</CustomField>