unpackaged/main/default/objects/Customer_Quote__c/fields/GL_Project__c.field-meta.xml
<CustomField>
    <fullName>GL_Project__c</fullName>
    <formula>Opportunity_Name__r.GL_Project__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Project</label>
    <type>Text</type>
</CustomField>