unpackaged/main/default/objects/Customer_Quote__c/fields/GL_Region__c.field-meta.xml
<CustomField>
    <fullName>GL_Region__c</fullName>
    <formula>Opportunity_Name__r.GL_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Region</label>
    <type>Text</type>
</CustomField>