unpackaged/main/default/objects/Customer_Quote__c/fields/GL_Zone__c.field-meta.xml
<CustomField>
    <fullName>GL_Zone__c</fullName>
    <formula>Opportunity_Name__r.GL_Zone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Zone</label>
    <type>Text</type>
</CustomField>