unpackaged/main/default/objects/Customer_Quote__c/fields/GPS_Tracking_System__c.field-meta.xml
<CustomField>
    <fullName>GPS_Tracking_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GPS Tracking System</label>
    <type>Checkbox</type>
</CustomField>