unpackaged/main/default/objects/Customer_Quote__c/fields/GPS_Tracking_System_AED__c.field-meta.xml
<CustomField>
    <fullName>GPS_Tracking_System_AED__c</fullName>
    <label>GPS Tracking System AED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>