unpackaged/main/default/objects/Customer_Quote__c/fields/GPS_Tracking_System_Types__c.field-meta.xml
<CustomField>
    <fullName>GPS_Tracking_System_Types__c</fullName>
    <label>GPS Tracking System Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Terms_and_Conditions_Types</valueSetName>
    </valueSet>
</CustomField>