unpackaged/main/default/objects/Customer_Quote__c/fields/Insurance_Excess_Charge__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Excess_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Excess Charge</label>
    <type>Checkbox</type>
</CustomField>