unpackaged/main/default/objects/Customer_Quote__c/fields/Insurance_Excess_Charge_AED__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Excess_Charge_AED__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Insurance Excess Charge AED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>