unpackaged/main/default/objects/Customer_Quote__c/fields/Insurance_Excess_Charge_Types__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Excess_Charge_Types__c</fullName>
    <label>Insurance Excess Charge Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Terms_and_Conditions_Types</valueSetName>
    </valueSet>
</CustomField>