unpackaged/main/default/objects/Customer_Quote__c/fields/Is_Target_Price_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Target_Price_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Target Price Required</label>
    <type>Checkbox</type>
</CustomField>