unpackaged/main/default/objects/Customer_Quote__c/fields/LineItemCount__c.field-meta.xml
<CustomField>
    <fullName>LineItemCount__c</fullName>
    <label>Line Items</label>
    <summaryForeignKey>Customer_Quote_Line_Item__c.Customer_Quote_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>