unpackaged/main/default/objects/Customer_Quote__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quote Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>