unpackaged/main/default/objects/Customer_Quote__c/fields/Next_Approval__c.field-meta.xml
<CustomField>
    <fullName>Next_Approval__c</fullName>
    <label>Next Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending with Chief Commercial Officer</fullName>
            </value>
            <value>
                <fullName>Pending with CEO</fullName>
            </value>
            <value>
                <fullName>Pending with Investments Committee</fullName>
            </value>
            <value>
                <fullName>Pending with School Transport Executive Director</fullName>
            </value>
            <value>
                <fullName>Pending with Deputy CEO</fullName>
            </value>
            <value>
                <fullName>Pending with Chief Transport &amp; Lease Officer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>