unpackaged/main/default/objects/Customer_Quote__c/fields/Non_Food_Permit__c.field-meta.xml
<CustomField>
    <fullName>Non_Food_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Food Permit</label>
    <type>Checkbox</type>
</CustomField>