unpackaged/main/default/objects/Customer_Quote__c/fields/Non_Food_Permit_AED__c.field-meta.xml
<CustomField>
    <fullName>Non_Food_Permit_AED__c</fullName>
    <label>Non-Food Permit AED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>