unpackaged/main/default/objects/Customer_Quote__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>