unpackaged/main/default/objects/Customer_Quote__c/fields/otal_Number_of_Coordinators__c.field-meta.xml
<CustomField>
    <fullName>otal_Number_of_Coordinators__c</fullName>
    <label>otal Number of Coordinators</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>