unpackaged/main/default/objects/Customer_Quote__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>