unpackaged/main/default/objects/Customer_Quote__c/fields/Pre_mature_penalty_Months_1st_Year__c.field-meta.xml
<CustomField>
    <fullName>Pre_mature_penalty_Months_1st_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre mature penalty Months - 1st Year</label>
    <type>Checkbox</type>
</CustomField>