unpackaged/main/default/objects/Customer_Quote__c/fields/Pre_mature_penalty_Months_4th_Year_Types__c.field-meta.xml
<CustomField>
    <fullName>Pre_mature_penalty_Months_4th_Year_Types__c</fullName>
    <label>Pre mature penalty Months-4th Year Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Terms_and_Conditions_Types</valueSetName>
    </valueSet>
</CustomField>