unpackaged/main/default/objects/Customer_Quote__c/fields/Pre_mature_penalty_Months_6th_Year_AED__c.field-meta.xml
<CustomField>
    <fullName>Pre_mature_penalty_Months_6th_Year_AED__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pre mature penalty Months - 6th Year AED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>