unpackaged/main/default/objects/Customer_Quote__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Customer Quotes</relationshipLabel>
    <relationshipName>Customer_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>