unpackaged/main/default/objects/Customer_Quote__c/fields/QuoteToAddress__c.field-meta.xml
<CustomField>
    <fullName>QuoteToAddress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quote To</label>
    <type>Address</type>
</CustomField>