unpackaged/main/default/objects/Customer_Quote__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>