unpackaged/main/default/objects/Customer_Quote__c/fields/Service_Charge_of_AED_Amount__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_of_AED_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Service Charge of AED Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>