unpackaged/main/default/objects/Customer_Quote__c/fields/Service_Charge_of_fils__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_of_fils__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Charge of fils</label>
    <type>Checkbox</type>
</CustomField>