unpackaged/main/default/objects/Customer_Quote__c/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ship To</label>
    <type>Address</type>
</CustomField>