unpackaged/main/default/objects/Customer_Quote__c/fields/ShippingName__c.field-meta.xml
<CustomField>
    <fullName>ShippingName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ship To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>