unpackaged/main/default/objects/Customer_Quote__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>Subtotal</label>
    <summarizedField>Customer_Quote_Line_Item__c.Subtotal__c</summarizedField>
    <summaryForeignKey>Customer_Quote_Line_Item__c.Customer_Quote_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>