unpackaged/main/default/objects/Customer_Quote__c/fields/Total_Number_of_Nannies__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Nannies__c</fullName>
    <label>Total Number of Nannies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>