unpackaged/main/default/objects/Customer_Quote__c/fields/Total_Number_of_other_manpower__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_other_manpower__c</fullName>
    <label>Total Number of other manpower</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>