unpackaged/main/default/objects/Customer_Quote__c/fields/Vehicle_Deep_Cleaning_charges__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Deep_Cleaning_charges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Deep Cleaning charges</label>
    <type>Checkbox</type>
</CustomField>