unpackaged/main/default/objects/Customer_Quote__c/fields/Vehicle_Deep_Cleaning_charges_AED__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Deep_Cleaning_charges_AED__c</fullName>
    <label>Vehicle Deep Cleaning charges AED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>