unpackaged/main/default/objects/Customer_Quote__c/fields/Vehicle_Deep_Cleaning_charges_Types__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Deep_Cleaning_charges_Types__c</fullName>
    <label>Vehicle Deep Cleaning charges Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Terms_and_Conditions_Types</valueSetName>
    </valueSet>
</CustomField>